--- a/index.ipynb
+++ b/index.ipynb
@@ -46,9 +46,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "None\n",
-      "None\n",
-      "None\n"
+      "1.0\n",
+      "-0.0\n",
+      "0.6500224216483541\n"
      ]
     }
    ],
@@ -59,11 +59,17 @@
     "    return the Entropy of a probability distribution:\n",
     "    entropy(p) = - SUM (Pi * log(Pi) )\n",
     "    '''\n",
+    "    total = 0\n",
+    "    for p in pi:\n",
+    "        p = p / sum(pi)\n",
+    "        if p != 0:\n",
+    "            total +=  p * log(p, 2)\n",
+    "        else:\n",
+    "            total += 0\n",
+    "    total *= -1\n",
+    "    return total\n",
     "\n",
-    "    pass\n",
-    "\n",
-    "\n",
-    "# Test the function \n",
+    "# Test the function by uncommenting cells below\n",
     "\n",
     "print(entropy([1,1])) # Maximum Entropy e.g. a coin toss\n",
     "print (entropy([0,6])) # No entropy, ignore the -ve with zero , its there due to log function\n",
@@ -97,7 +103,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "None\n"
+      "0.5408520829727552\n"
      ]
     }
    ],
@@ -108,7 +114,12 @@
     "    gain(D, A) = entropy(D)− SUM( |Di| / |D| * entropy(Di) )\n",
     "    '''\n",
     "\n",
-    "    pass\n",
+    "    total = 0\n",
+    "    for Di in a:\n",
+    "        total += abs(sum(Di) / sum(D)) * entropy(Di)\n",
+    "\n",
+    "    gain = entropy(D) - total\n",
+    "    return gain\n",
     "\n",
     "\n",
     "# Uncomment to run the test\n",
@@ -153,14 +164,32 @@
     }
    ],
    "source": [
+    "play = [9, 5] # Yes, No\n",
     "\n",
-    "\n",
-    "# Your code here\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "# Information Gain:\n",
+    "# attribute, number of members (feature)\n",
+    "outlook = [\n",
+    "    [4, 0],  # overcase\n",
+    "    [2, 3],  # sunny\n",
+    "    [3, 2]   # rain\n",
+    "]\n",
+    "temperature = [\n",
+    "    [2, 2],  # hot\n",
+    "    [3, 1],  # cool\n",
+    "    [4, 2]   # mild\n",
+    "]\n",
+    "humidity = [\n",
+    "    [3, 4],  # high\n",
+    "    [6, 1]   # normal\n",
+    "]\n",
+    "wind = [\n",
+    "    [6, 2],  # no\n",
+    "    [3, 3]   # yes\n",
+    "]\n",
+    "print (\"Information Gain:\\n\" )\n",
+    "print(\"Outlook:\", IG(play, outlook))\n",
+    "print(\"Temperature:\",IG(play, temperature))\n",
+    "print(\"Humidity:\",IG(play, humidity))\n",
+    "print(\"Wind:,\",IG(play, wind))\n",
     "\n",
     "# Outlook: 0.2467498197744391\n",
     "# Temperature: 0.029222565658954647\n",
@@ -189,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -205,14 +234,19 @@
     }
    ],
    "source": [
+    "# set of example of the dataset\n",
+    "Play = [2, 3] \n",
+    "\n",
+    "temperature = [[0, 2],[1, 0], [1, 1]]  \n",
+    "humidity = [[0, 3],[2, 0]]\n",
+    "wind = [[2, 2],[1, 1]]\n",
     "\n",
     "\n",
-    "# Your code here \n",
+    "print (\"Information Gain:\\n\" )\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "# Information Gain:\n",
+    "print(\"Temperature:\",IG(play, temperature))\n",
+    "print(\"Humidity:\",IG(play, humidity))\n",
+    "print(\"Wind:,\",IG(play, wind))\n",
     "\n",
     "# Temperature: 0.7974288158134881\n",
     "# Humidity: 0.9402859586706309\n",
@@ -262,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -278,14 +312,16 @@
     }
    ],
    "source": [
+    "play = [3, 2] # Yes, No\n",
     "\n",
+    "temperature = [[2, 1],[1, 1]] # [0, 0] hot - we dont need to pass in an empty distribution\n",
+    "humidity = [[1, 1], [2, 1]]\n",
+    "wind = [[3, 0],[0, 2]]\n",
     "\n",
-    "# Your code here\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "# Information Gain:\n",
+    "print (\"Information Gain:\\n\" )\n",
+    "print(\"Temperature:\",IG(play, temperature))\n",
+    "print(\"Humidity:\",IG(play, humidity))\n",
+    "print(\"Wind:,\",IG(play, wind))\n",
     "\n",
     "# Temperature: 0.01997309402197489\n",
     "# Humidity: 0.01997309402197489\n",
@@ -349,7 +385,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
